--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "axios": "^1.7.7",
+    "axios-hooks": "^5.0.2",
     "ky": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
